@@ -1,10 +1,0 @@
-<html xmlns="http://www.w3.org/1999/xhtml" xml:lang="en"
-      xmlns:tal="http://xml.zope.org/namespaces/tal"
-      lang="en"
-      i18n:domain="ftw.file">
-<body>
-<img tal:define="scale context/@@images"
-     tal:replace="structure python: scale.scale('file',
-                  width=600, direction='down').tag()" />        		
-</body>
-</html>
