@@ -1,5 +1,0 @@
-from Products.Five import BrowserView
-
-
-class BigImg(BrowserView):
-    """ View for ftw.file """
