@@ -25,11 +25,4 @@
         permission="zope2.View"
         />
 
-	 <browser:page
-		for="ftw.file.interfaces.IFile"
-		class=".big_img.BigImg"
-		name="big_img"
-		template="big_img.pt"
-		permission="zope2.View" />
-
 </configure>
