@@ -5,15 +5,6 @@
       lang="en"
       metal:use-macro="context/main_template/macros/master"
       i18n:domain="ftw.file">
-<head>
-<metal:js fill-slot="javascript_head_slot">
-    <script type="text/javascript">
-	jq(function(){
-		jq('#preview').prepOverlay({subtype:'ajax'});
-	});
-	</script>
-</metal:js>
-</head>
 <body>
 <metal:content-description fill-slot="content-description">
     <metal:description define-macro="content-description">
@@ -69,11 +60,11 @@
 			    tal:condition="tag">
 				<th i18n:translate="">Preview</th>
 				<td>
-	                <a id="preview" tal:attributes="href string:${context/absolute_url}/big_img">
+	                <a id="preview" class="colorboxLink" tal:attributes="href string:${context/absolute_url}/@@images/file">
                         <img tal:replace="structure tag" />
                     </a>
                 </td>
-			</tr>
+	    </tr>
     </table>
     </metal:content-core>
 </metal:content-core>
