@@ -1,7 +1,8 @@
 <?xml version="1.0"?>
 <metadata>
-  <version>1515</version>
+  <version>1516</version>
     <dependencies>
         <dependency>profile-ftw.calendarwidget:default</dependency>
+        <dependency>profile-ftw.colorbox:default</dependency>
     </dependencies>
 </metadata>
