@@ -10,12 +10,16 @@ Changelog
   You can set a new filename without touching its extension.
   [elioschmutz]
 
+- Use ftw.colorbox for ftw.file overlay.
+  [tschanzt]
+
 - Use PIL itself to detect images.
   [tschanzt]
 
 - Remove percent signs from download URL to fix problems in combination with
   Apache mod_rewrite.
   [buchi]
+
 
 
 1.7.4 (2013-11-28)
